--- a/main/templates/main/consultation_request.html
+++ b/main/templates/main/consultation_request.html
@@ -2,6 +2,12 @@
 
 {% block title %}درخواست مشاوره حقوقی | مشاوره با وکیل و قاضی بازنشسته - عدل‌بان{% endblock %}
 
+{% block meta_tags %}
+<meta name="description" content="درخواست مشاوره حقوقی با وکیل و قاضی بازنشسته در مرکز مشاوره عدل‌بان - مشاوره تلفنی، آنلاین و حضوری با بهترین وکلای دادگستری" />
+<meta name="keywords" content="درخواست مشاوره حقوقی, مشاوره با وکیل, مشاوره با قاضی بازنشسته, فرم مشاوره حقوقی" />
+<link rel="canonical" href="{{ request.build_absolute_uri }}" />
+{% endblock %}
+
 {% block breadcrumb %}
 <!-- Breadcrumb -->
 <div class="container mx-auto px-4 py-4">
