--- a/main/templates/main/in_person_legal_consultation.html
+++ b/main/templates/main/in_person_legal_consultation.html
@@ -2,6 +2,12 @@
 
 {% block title %}مشاوره حقوقی حضوری با وکیل پایه یک | مرکز مشاوره عدل‌بان{% endblock %}
 
+{% block meta_tags %}
+<meta name="description" content="مشاوره حقوقی حضوری با وکیل پایه یک دادگستری در مرکز مشاوره عدل‌بان - جلسه حضوری با بهترین وکلای متخصص" />
+<meta name="keywords" content="مشاوره حقوقی حضوری, وکیل حضوری, مشاوره حضوری با وکیل, جلسه مشاوره حضوری" />
+<link rel="canonical" href="{{ request.build_absolute_uri }}" />
+{% endblock %}
+
 {% block extra_css %}
 <style>
     .benefit-card {
