--- a/main/templates/main/phone_legal_consultation.html
+++ b/main/templates/main/phone_legal_consultation.html
@@ -2,6 +2,12 @@
 
 {% block title %}مشاوره حقوقی تلفنی با وکیل پایه یک | مرکز مشاوره عدل‌بان{% endblock %}
 
+{% block meta_tags %}
+<meta name="description" content="مشاوره حقوقی تلفنی با وکیل پایه یک دادگستری در مرکز مشاوره عدل‌بان - مشاوره تخصصی و سریع از طریق تلفن" />
+<meta name="keywords" content="مشاوره حقوقی تلفنی, وکیل تلفنی, مشاوره با وکیل پایه یک, مشاوره تلفنی حقوقی" />
+<link rel="canonical" href="{{ request.build_absolute_uri }}" />
+{% endblock %}
+
 {% block extra_css %}
 <style>
     .benefit-card {
