--- a/main/templates/main/quick_legal_advice.html
+++ b/main/templates/main/quick_legal_advice.html
@@ -2,6 +2,12 @@
 
 {% block title %}مشاوره حقوقی فوری و سریع | مرکز مشاوره عدل‌بان{% endblock %}
 
+{% block meta_tags %}
+<meta name="description" content="مشاوره حقوقی فوری و سریع با وکیل متخصص در مرکز مشاوره عدل‌بان - پاسخگویی آنی به سوالات حقوقی شما" />
+<meta name="keywords" content="مشاوره حقوقی فوری, مشاوره سریع حقوقی, وکیل فوری, مشاوره آنی حقوقی" />
+<link rel="canonical" href="{{ request.build_absolute_uri }}" />
+{% endblock %}
+
 {% block extra_css %}
 <style>
     .benefit-card {
